<resources>
    <string name="app_name">橙子视频</string>
    <string name="main_tab_home">主页</string>
    <string name="main_tab_online">直播</string>
    <string name="main_tab_videos">点播</string>
    <string name="main_tab_myprofile">我的</string>


    <string name="no_data">没有数据</string>
    <string name="load_data_fail">加载失败</string>
    <string name="load_data_adequate">没有更多啦</string>
    <string name="loading_data">加载中...</string>


    <string name="unknow_erro">未知错误</string>

    <string name="more">更多</string>
    <string name="movie">影视</string>
    <string name="funny">搞笑</string>
    <string name="passage">段子</string>
    <string name="original">原创</string>
    <string name="recreation">娱乐</string>
    <string name="play">播放</string>
    <string name="intro">简介</string>
    <string name="unknow">未知</string>
    <string name="cmcc">中国移动</string>
    <string name="unicom">中国联通</string>
    <string name="telecom">中国电信</string>
    <string name="detail">详情</string>

    <string name="content_desc_lock">锁定</string>
    <string name="VideoView_ar_aspect_fit_parent">自适应</string>
    <string name="VideoView_ar_aspect_fill_parent">裁剪</string>
    <string name="VideoView_ar_aspect_wrap_content">100%</string>
    <string name="VideoView_ar_match_parent">Free / Fill parent</string>
    <string name="VideoView_ar_16_9_fit_parent">16:9</string>
    <string name="VideoView_ar_4_3_fit_parent">4:3</string>
    <string name="N_A">N/A</string>
    <string name="video_screen_locked">屏幕已锁定</string>
    <string name="video_screen_unlocked">屏幕锁定已解除</string>
    <string name="video_layout_buffering_progress">缓冲: %.2f%%</string>
    <string name="video_cannot_play">对不起,这个视频不能播放。</string>
    <string name="file_explorer_sdcard_not_available">SD卡无法读取</string>
    <string name="video_screenshot_save_in">截图存放在 %s.</string>
    <string name="video_screenshot_failed">截图失败</string>
    <string name="video_layout_loading">正在缓冲&#8230;</string>
    <string name="closing_file">正在退出&#8230;</string>
    <string name="alert_dialog_ok">确定</string>
    <string name="alert_dialog_cancel">取消</string>
    <string name="alert_dialog_text_phonenumber">请输入手机号</string>
    <string name="alert_dialog_upgrade">升级</string>
    <string name="alert_dialog_upgradetip">升级提示</string>
    <string name="alert_dialog_jump">跳过</string>

    <string name="tips">提示</string>
    <string name="toast_exit_tip">再按一次退出</string>
    <string name="pay">购买</string>

    <string name="test">这是一段很长很长的文字，用于测试文字很长布局显示的情况。有时候实际使用场景Toolbar高度满足不了需求（比如平板），需要对Toolbar高度增加。这是一段很长很长的文字，用于测试文字很长布局显示的情况。有时候实际使用场景Toolbar高度满足不了需求（比如平板），需要对Toolbar高度增加.</string>
    <string name="history">播放记录</string>
    <string name="collect">我的收藏</string>
    <string name="feedback">帮助反馈</string>
    <string name="about">关于</string>
    <string name="login_or_register">点击登录/注册</string>
    <string name="title_activity_login">登录</string>

    <!-- Strings related to login -->
    <string name="prompt_phone">输入11位手机号</string>
    <string name="prompt_password">输入密码</string>
    <string name="action_sign_in">登录</string>

    <string name="error_invalid_password">密码长度为6-16位</string>
    <string name="error_incorrect_password">密码只能包含字母或数字</string>
    <string name="error_discord_password">两次密码输入不一致</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="register_account">注册账户</string>
    <string name="forget_password">忘记密码</string>
    <string name="program_pro">节目单</string>
    <string name="action_register_in">注册</string>
    <string name="prompt_code">验证码</string>
    <string name="getcode">获取验证码</string>
    <string name="action_register_next">下一步</string>
    <string name="input_phone">请输入手机号码！</string>
    <string name="txt_phonenumber_erro">手机号格式错误！</string>
    <string name="txt_later_retry">%1$d秒后重试</string>
    <string name="input_code">请输入验证码</string>
    <string name="prompt_password_verify">再次输入确认密码</string>
    <string name="action_register_finish">完成注册</string>
    <string name="register_wiat">注册中…</string>
    <string name="account_safety">账户安全</string>
    <string name="my_profile">个人资料</string>


    <string name="prompt_new_password">请输入新密码</string>
    <string name="prompt_new_password_verify">请再次输入新密码</string>
    <string name="reset_password">重置密码</string>
    <string name="head">头像</string>
    <string name="nickname">昵称</string>
    <string name="gender">性别</string>
    <string name="birthday">出生年月</string>
    <string name="describe">个性签名</string>
    <string name="account_security">账号安全</string>
    <string name="logout">退出登录</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="gender_unknow">保密</string>
    <string name="prompt_nickname">昵称字数不能超过20个字</string>
    <string name="prompt_desc">个性签名字数不超过140个字</string>
    <string name="ok">确定</string>
    <string name="edit_profile">编辑资料</string>

    <string name="no_camera">照相功能未找到！</string>
    <string name="no_sdcard">SD卡不可用！</string>
    <string name="pic_notfound">图片未找到</string>
    <string name="commit">提交</string>
    <string name="edit_password">修改密码</string>
    <string name="old_passowrd">原始密码</string>
    <string name="edit">修改</string>
    <string name="hint_edit_newpassword">6-16位新密码</string>
    <string name="hint_edit_newpassword_verify">再次输入新密码</string>
    <string name="txt_share_sina">新浪微博</string>
    <string name="txt_share_weixin">微信好友</string>
    <string name="txt_share_weixin＿relations">微信朋友圈</string>
    <!-- 分享成功失败的 Toast -->
    <string name="weibosdk_demo_toast_share_success">分享成功</string>
    <string name="weibosdk_demo_toast_share_failed">分享失败</string>
    <string name="weibosdk_demo_toast_share_canceled">取消分享</string>
    <string name="weibosdk_demo_not_support_api_hint">微博客户端不支持 SDK 分享或微博客户端未安装或微博客户端是非官方版本。</string>
    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unknown">发送返回</string>
    <string name="feedback_phone">请填写您的手机号码</string>
    <string name="feedback_describe">说点什么...</string>
    <string name="send_feedback">发送</string>
    <string name="delete">删除</string>


    <string name="tab_vediocollect">点播收藏</string>
    <string name="tab_onlinecollect">直播收藏</string>
    <string name="txt_playcnt">%1$s人观看</string>
</resources>
