<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.community.yuequ.gui.EditPasswordActivity">

    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        >


        <EditText
            android:id="@+id/old_password"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_login_input_top"
            android:hint="@string/old_passowrd"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingEnd="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            />

        <EditText
            android:id="@+id/new_password"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:background="@drawable/bg_login_input_mid"
            android:hint="@string/hint_edit_newpassword"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingEnd="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/bb_darkBackgroundColor"/>

        <EditText
            android:id="@+id/new_password_verify"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:background="@drawable/bg_login_input_bottom"
            android:hint="@string/hint_edit_newpassword_verify"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingEnd="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"/>


        <Button
            android:id="@+id/edit_button"
            style="?android:textAppearanceMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_orange_selector"
            android:text="@string/edit"
            android:textColor="@color/white"
            />
    </LinearLayout>
</LinearLayout>
