<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_edit_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

   <include layout="@layout/toolbar"/>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/la_nickname"
            android:textColor="@color/grey600"
            android:textSize="13sp"
            android:text="@string/feedback_phone"
            android:layout_marginTop="10dp"
            android:visibility="visible"/>
        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="6dp"
            android:background="@mipmap/bg_oli_round"
            android:inputType="phone"
            android:maxLines="1"
            android:hint="@string/prompt_phone"
            android:textSize="16sp"
            android:paddingEnd="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:visibility="visible"/>

        <EditText
            android:id="@+id/et_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="90dp"
            android:layout_marginTop="15dp"
            android:textSize="16sp"
            android:lineSpacingExtra="5dp"
            android:background="@mipmap/bg_oli_round"
            android:inputType="textMultiLine"
            android:lines="2"
            android:maxLines="10"
            android:hint="@string/feedback_describe"
            android:gravity="left|top"
            android:paddingEnd="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:visibility="visible"/>


        <Button
            android:id="@+id/feedback_button"
            style="?android:textAppearanceMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_orange_selector"
            android:text="@string/send_feedback"
            android:textColor="@color/white"
            />
    </LinearLayout>


    </android.support.v4.widget.NestedScrollView>


</LinearLayout>
