<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              >

    <include layout="@layout/toolbar"/>


    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/login_logo"/>

            <AutoCompleteTextView
                android:id="@+id/atv_phone"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_login_input_top"
                android:hint="@string/prompt_phone"
                android:inputType="phone"
                android:maxLines="1"
                android:paddingEnd="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingStart="10dp"
                />


            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:background="@drawable/bg_login_input_bottom"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingEnd="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingStart="10dp"/>


            <Button
                android:id="@+id/sign_in_button"
                style="?android:textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_orange_selector"
                android:text="@string/action_sign_in"
                android:textColor="@color/white"
                />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical|center_horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:text="@string/register_account"
                    android:id="@+id/tv_register_account"/>

                <View
                    android:layout_width="1px"
                    android:layout_height="18dp"
                    android:background="@color/grey600"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey600"
                    android:textSize="16sp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/forget_password"
                    android:id="@+id/tv_forget_password"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
