<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:gravity="center_horizontal"
              android:orientation="vertical"
    >

    <include layout="@layout/toolbar"/>


    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:id="@+id/code_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--  <ImageView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:src="@mipmap/login_logo"/>-->

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_login_input_round"
                android:hint="@string/prompt_phone"
                android:inputType="phone"
                android:maxLines="1"
                android:paddingEnd="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingStart="10dp"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">
                <Button
                    android:id="@+id/code_register_button"
                    style="?android:textAppearanceMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="43dp"
                    android:minWidth="92dp"
                    android:textSize="15.5sp"
                    android:paddingLeft="6dp"
                    android:paddingRight="6dp"
                    android:paddingStart="6dp"
                    android:paddingEnd="6dp"
                    android:background="@drawable/bg_orange_selector"
                    android:text="@string/getcode"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:textColor="@color/white"
                    />
                <EditText
                    android:id="@+id/et_code"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@drawable/bg_login_input_round"
                    android:hint="@string/prompt_code"
                    android:layout_centerVertical="true"
                    android:inputType="number"
                    android:layout_toLeftOf="@id/code_register_button"
                    android:layout_toStartOf="@id/code_register_button"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    android:maxLines="1"
                    android:paddingEnd="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingStart="10dp"/>
            </RelativeLayout>


            <Button
                android:id="@+id/next_register_button"
                style="?android:textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:background="@drawable/bg_orange_selector"
                android:text="@string/action_register_next"
                android:textColor="@color/white"
                />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
