<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.community.yuequ.gui.EditInfoActivity">

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:theme="@style/AppTheme.AppBarOverlay"
        app:navigationIcon="?attr/homeAsUpIndicator">

        <TextView
            android:id="@+id/toolbar_title"
            style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:lines="1"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:scrollHorizontally="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:ellipsize="marquee"
            android:textColor="@color/white"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.ActionButton"
            android:text="@string/ok"
            android:id="@+id/btn_ok"
            android:layout_gravity="right|center_vertical"/>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/la_nickname"
            android:textColor="@color/grey600"
            android:textSize="13sp"
            android:text="@string/prompt_nickname"
            android:layout_marginTop="10dp"
            android:visibility="gone"/>
        <EditText
            android:id="@+id/et_nickname"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="6dp"
            android:background="@mipmap/bg_oli_round"
            android:inputType="text"
            android:maxLines="1"
            android:maxLength="16"
            android:textSize="16sp"
            android:paddingEnd="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:visibility="gone"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/la_desc"
            android:textColor="@color/grey600"
            android:textSize="13sp"
            android:text="@string/prompt_desc"
            android:layout_marginTop="10dp"
            android:visibility="gone"/>
        <EditText
            android:id="@+id/et_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="90dp"
            android:layout_marginTop="5dp"
            android:textSize="16sp"
            android:lineSpacingExtra="5dp"
            android:background="@mipmap/bg_oli_round"
            android:inputType="textMultiLine"
            android:lines="2"
            android:maxLength="140"
            android:maxLines="8"
            android:gravity="left|top"
            android:paddingEnd="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:visibility="gone"/>

    </LinearLayout>





</LinearLayout>
